--- a/packages/vue/package.json
+++ b/packages/vue/package.json
@@ -19,6 +19,7 @@
     "@tsconfig/node18": "^2.0.1",
     "@types/node": "^18.16.18",
     "@vitejs/plugin-vue": "^4.2.3",
+    "@vue/eslint-config-airbnb": "^7.0.0",
     "@vue/eslint-config-prettier": "^7.1.0",
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/tsconfig": "^0.4.0",
